<resources>
    <string name="app_name">NoteDown</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="side_by_side">Side by side</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_side_by_side">SideBySideActivity</string>
    <string name="new_doc_ou_new_file">New</string>
    <string name="cut">Cut</string>
    <string name="blank">Blank</string>
    <string name="file_open">Open file</string>
    <string name="title_activity_cut">CutActivity</string>
    <string name="title_activity_notes_only">NotesOnlyActivity</string>
    <string name="note_title_hint">Title</string>
    <string name="note_edit_hint">Content</string>
    <string name="pdf_description">pdf</string>
</resources>
